package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"seckill-mall/common/config"
	"strconv"

	"google.golang.org/grpc"
	"gorm.io/driver/mysql"
	"gorm.io/gorm"

	clientv3 "go.etcd.io/etcd/client/v3"
	"go.etcd.io/etcd/client/v3/naming/endpoints"

	"seckill-mall/common/pb"

	// å¼•å…¥ Redis åº“
	"github.com/redis/go-redis/v9"
)

const (
	ETCD_ADDR    = "127.0.0.1:2379"
	SERVICE_NAME = "seckill/product"
	SERVICE_ADDR = "127.0.0.1:50051"
)

// === 1. å®šä¹‰ Lua è„šæœ¬ (æ ¸å¿ƒ) ===
// KEYS[1]: å•†å“çš„ Redis Key (ä¾‹å¦‚ product:stock:1)
// ARGV[1]: è¦æ‰£å‡çš„æ•°é‡
const LUA_SCRIPT = `
local key = KEYS[1]
local change = tonumber(ARGV[1])

-- è·å–å½“å‰åº“å­˜
local stock = tonumber(redis.call('get', key))

-- å¦‚æœåº“å­˜è¿˜æ²¡é¢„çƒ­ï¼Œç›´æ¥è¿”å›é”™è¯¯
if not stock then
  return -1
end

-- å¦‚æœåº“å­˜è¶³å¤Ÿï¼Œå°±æ‰£å‡
if stock >= change then
  redis.call('DECRBY', key, change)
  return 1 -- æˆåŠŸ
else
  return 0 -- åº“å­˜ä¸è¶³
end
`

// ... (Product ç»“æ„ä½“, initRedis, initDB, preheatStock ç­‰ä¿æŒä¸å˜) ...

// === 2. å®ç° DeductStock æ¥å£ ===
func (s *server) DeductStock(ctx context.Context, req *pb.DeductStockRequest) (*pb.DeductStockResponse, error) {
	// æ‹¼æ¥ Key: product:stock:1
	key := "product:stock:" + strconv.FormatInt(req.ProductId, 10)

	// æ‰§è¡Œ Lua è„šæœ¬
	// Eval(ctx, è„šæœ¬, Keyåˆ—è¡¨, å‚æ•°åˆ—è¡¨)
	val, err := rdb.Eval(ctx, LUA_SCRIPT, []string{key}, req.Count).Int()

	if err != nil {
		return &pb.DeductStockResponse{Success: false, Message: "Redis é”™è¯¯: " + err.Error()}, nil
	}

	if val == -1 {
		return &pb.DeductStockResponse{Success: false, Message: "å•†å“æœªé¢„çƒ­/ä¸å­˜åœ¨"}, nil
	}
	if val == 0 {
		return &pb.DeductStockResponse{Success: false, Message: "åº“å­˜ä¸è¶³"}, nil
	}

	fmt.Printf("âš¡ ç§’æ€æˆåŠŸï¼æ‰£å‡ Redis åº“å­˜ï¼Œå•†å“: %d, æ•°é‡: %d\n", req.ProductId, req.Count)
	return &pb.DeductStockResponse{Success: true, Message: "æ‰£å‡æˆåŠŸ"}, nil
}

// === æ•°æ®åº“æ¨¡å‹ ===
type Product struct {
	ID          int64   `gorm:"primaryKey"`
	Name        string  `gorm:"type:varchar(255)"`
	Price       float32 `gorm:"type:decimal(10,2)"`
	Stock       int32   `gorm:"type:int"`
	Description string  `gorm:"type:varchar(255)"`
}

func (Product) TableName() string { return "product" }

var db *gorm.DB
var rdb *redis.Client // å…¨å±€ Redis å®¢æˆ·ç«¯

type server struct {
	pb.UnimplementedProductServiceServer
}

// GetProduct å®ç°
func (s *server) GetProduct(ctx context.Context, req *pb.ProductRequest) (*pb.ProductResponse, error) {
	// ... è¿™é‡Œä¿æŒä¸å˜ ...
	var product Product
	if err := db.First(&product, req.ProductId).Error; err != nil {
		return nil, err
	}
	return &pb.ProductResponse{
		ProductId: product.ID, Name: product.Name, Price: product.Price,
	}, nil
}

// === æ–°å¢ï¼šåˆå§‹åŒ– Redis ===
func initRedis() {
	rdb = redis.NewClient(&redis.Options{
		Addr:     config.Conf.Redis.Addr,
		Password: config.Conf.Redis.Password,
		DB:       config.Conf.Redis.DB,
	})

	// æµ‹è¯•è¿æ¥
	if err := rdb.Ping(context.Background()).Err(); err != nil {
		log.Fatalf("è¿æ¥ Redis å¤±è´¥: %v", err)
	}
	fmt.Println("Redis è¿æ¥æˆåŠŸï¼")
}

// === æ–°å¢ï¼šåº“å­˜é¢„çƒ­ (æŠŠ MySQL çš„åº“å­˜åŒæ­¥åˆ° Redis) ===
// å®é™…ç”Ÿäº§ä¸­ï¼Œè¿™ä¸ªé€šå¸¸é€šè¿‡åå°ç®¡ç†ç³»ç»Ÿè§¦å‘ï¼Œè¿™é‡Œæˆ‘ä»¬ç®€åŒ–ä¸ºå¯åŠ¨æ—¶è‡ªåŠ¨åŠ è½½
func preheatStock() {
	var products []Product
	db.Find(&products) // æŸ¥å‡ºæ‰€æœ‰å•†å“

	for _, p := range products {
		key := "product:stock:" + strconv.FormatInt(p.ID, 10)

		// SetNX: å¦‚æœ Key ä¸å­˜åœ¨æ‰è®¾ç½® (é˜²æ­¢é‡å¯æœåŠ¡è¦†ç›–äº†å·²ç»æ‰£å‡çš„åº“å­˜)
		// è¿™é‡Œçš„ value å°±æ˜¯åº“å­˜æ•° (ä¾‹å¦‚ 100)
		err := rdb.SetNX(context.Background(), key, p.Stock, 0).Err()
		if err != nil {
			fmt.Printf("é¢„çƒ­åº“å­˜å¤±è´¥ %d: %v\n", p.ID, err)
		} else {
			fmt.Printf("ğŸ”¥ åº“å­˜å·²é¢„çƒ­: %s => %d\n", key, p.Stock)
		}
	}
}

// ... RegisterEtcd å’Œ initDB å‡½æ•°ä¿æŒä¸å˜ (è¯·ä¿ç•™å®ƒä»¬ï¼) ...
// ä¸ºäº†ç¯‡å¹…ï¼Œæˆ‘è¿™é‡Œç®€å†™äº†ï¼Œè¯·åŠ¡å¿…ä¿ç•™ä½ åŸæ¥çš„ RegisterEtcd å’Œ initDB ä»£ç ï¼

// å¤åˆ¶ä¸€ä»½ä¹‹å‰çš„ RegisterEtcd å’Œ initDB æ”¾åœ¨è¿™é‡Œ...
func RegisterEtcd() {
	// ... åŸæ ·ä¿ç•™ ...
	cli, _ := clientv3.New(clientv3.Config{Endpoints: []string{config.Conf.Etcd.Addr}})
	em, _ := endpoints.NewManager(cli, SERVICE_NAME)
	lease, _ := cli.Grant(context.TODO(), 10)
	em.AddEndpoint(context.TODO(), SERVICE_NAME+"/"+SERVICE_ADDR, endpoints.Endpoint{Addr: SERVICE_ADDR}, clientv3.WithLease(lease.ID))
	ch, _ := cli.KeepAlive(context.TODO(), lease.ID)
	go func() {
		for range ch {
		}
	}()
	fmt.Printf("âœ… æœåŠ¡å·²æ³¨å†Œåˆ° Etcd\n")
}

func initDB() {
	dsn := config.Conf.MySQL.DSN
	var err error
	db, err = gorm.Open(mysql.Open(dsn), &gorm.Config{})
	if err != nil {
		log.Fatal(err)
	}
	fmt.Println("MySQL è¿æ¥æˆåŠŸï¼")
}

func main() {
	config.InitConfig()
	initDB()
	initRedis()    // 1. è¿ Redis
	preheatStock() // 2. é¢„çƒ­åº“å­˜
	RegisterEtcd()

	lis, err := net.Listen("tcp", ":50051")
	if err != nil {
		log.Fatal(err)
	}
	s := grpc.NewServer()
	pb.RegisterProductServiceServer(s, &server{})
	fmt.Println("=== å•†å“å¾®æœåŠ¡ (Redisç‰ˆ) å·²å¯åŠ¨ ===")
	s.Serve(lis)
}
